--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "less": "^3.10.3",
+    "live-server": "^1.2.1",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server"
+    "less:browser": "live-server --open=/lesswithbrowser",
+    "less:node": "npm-run-all build:less serve:node -s",
+    "serve:node": "live-server --open=/lesswithnode",
+    "build:less": "lessc ./lesswithnode/less/init.less ./lesswithnode/css/styles.css --js"
   },
   "repository": {
     "type": "git",
